cmake_minimum_required(VERSION 3.17)
project(one C)

set(CMAKE_C_STANDARD 99)

add_executable(one main.c T2.c T3.c T4.c T5.c T6.c T7.c T8.c T11.c T12.c T13.c T14.c T15.c T16.c T17.c T18.c T19.c T21.c T22.c T23.c T24.c T25.c T26.c T27.c T31.c T32.c T33.c T34.c T35.c T36.c T41.c T42.c T43.c T44.c T45.c T46.c T47.c T48.c T49.c T51.c T52.c T53.c T54.c T55.c T56.c T57.c T58.c T59.c)